--- a/content/post/history.Rmd
+++ b/content/post/history.Rmd
@@ -7,25 +7,26 @@ url: /history/
 showDate: false
 ---
 
-In 1971, Donald Tepas, then at St. Louis University, contacted the National Science Foundation with a request for support in developing an interactive system for searches. The NSF representative Tepas looked into the possibility of arranging a conference and publishing the proceedings. The first meeting was so successful that the meetings have been held ever since! The logo on the left is from this very first meeting in 1971. 
-
-
+In 1971, Donald Tepas, then at St. Louis University, contacted the National Science Foundation with a request for support in developing an interactive system for searches. The NSF representative Tepas looked into the possibility of arranging a conference and publishing the proceedings. The first meeting was so successful that the meetings have been held ever since! The logo featured on our homepage. 
 
 The Society for Computation in Psychology (SCiP) was previously known as the National Conference on the Use of On-Line Computers in Psychology. The name was changed to the Society for Computation in Psychology in 1982. The first meeting was held on November 10th, 1971, at St. Louis University. This first meeting was held the day prior to the Psychonomic Society's meeting. SCiP is still held before the Psychonomic Society's meetings to this day! The first Presidential Address was given by Donald Tepas in 1973 and was entitled "Computer Analysis of the Electroencephalogram: Evolving, Promoting, and Provoking."
 
-In 2006, Dr. Christopher R. Wolfe documented the history of the Society for Computation in Psychology in Behavior Research Methods:
+**In 2006, Dr. Christopher R. Wolfe documented the history of the Society for Computation in Psychology in *Behavior Research Methods*:**
 
-SCiP history may be divided into three eras: the Paleozoic (1971–1982), the Mesozoic (1982–1994), and the Cenozoic (1994–present). Following a list of Secretary–Treasurers, a list of all SCiP Presidents is provided in Table 1. Next I present personal highlights, including the first symposium on psychology and the World-Wide Web; David Rumelhart’s mathematical explanation of connectionism; and Stevan Harnad’s discussion of "freeing" the journal literature. I observe that a small conference is becoming more intimate and that much of our mission involves figuring out how to conduct high-quality scientific research with consumer-grade electronics. I argue that we are an increasingly international organization, that graduate students are welcome, and that we should become more inclusive in the areas of gender and ethnicity and should make membership more meaningful. I conclude by looking ahead and attempting to predict the future.
+*<font size = "3">SCiP history may be divided into three eras: the Paleozoic (1971–1982), the Mesozoic (1982–1994), and the Cenozoic (1994–present). Following a list of Secretary–Treasurers, a list of all SCiP Presidents is provided in Table 1. Next I present personal highlights, including the first symposium on psychology and the World-Wide Web; David Rumelhart's mathematical explanation of connectionism; and Stevan Harnad's discussion of "freeing" the journal literature. I observe that a small conference is becoming more intimate and that much of our mission involves figuring out how to conduct high-quality scientific research with consumer-grade electronics. I argue that we are an increasingly international organization, that graduate students are welcome, and that we should become more inclusive in the areas of gender and ethnicity and should make membership more meaningful. I conclude by looking ahead and attempting to predict the future.</font>*
 
-His full historical account can be found here. Earlier histories have also been written, as cited below.
+His full historical account can be found [here](https://link.springer.com/content/pdf/10.3758/BF03192776.pdf). Earlier histories have also been written, as cited below.
 
-Computers and technology in psychology can be a cornucopia or a Pandora’s box. During the 20 years of its existence, the Society for Computation in Psychology has been an important focus for the appropriate and beneficial application of computingtechnology in psychology. Although the increase of computer use is unmistakable, cyclic trends in computer applications also can be identified and, together with current technological developments, lead to predictions, concerns, and challenges for the future. (Castellan, 1991)
+Computers and technology in psychology can be a cornucopia or a Pandora's box. During the 20 years of its existence, the Society for Computation in Psychology has been an important focus for the appropriate and beneficial application of computingtechnology in psychology. Although the increase of computer use is unmistakable, cyclic trends in computer applications also can be identified and, together with current technological developments, lead to predictions, concerns, and challenges for the future. (Castellan, 1991)
+
+
+
 
 The late Dr. N. John Castellan
 
-As we enter the next decade, I believe it is important that the Society for Computation in Psychology (S.C.I.P.) develop a little sense of history. So I would like to cover some years of the organization’s development and, in the process, cite several highlights that are worthy of note... (Sidowski, 1990)
+As we enter the next decade, I believe it is important that the Society for Computation in Psychology (S.C.I.P.) develop a little sense of history. So I would like to cover some years of the organization's development and, in the process, cite several highlights that are worthy of note... (Sidowski, 1990)
 
-Presentations at SCiP have led to groundbreaking and influential papers. Many of these have been published in the Psychonomic Society journal Behavior Research Methods (BRM). Each year BRM hosts a special issue of papers from SCiP presentations. Here is a sample of some major papers presented at SCiP and published in BRM. Together, they reflect thousands of citations, and broad influence on the field of psychological science.
+Presentations at SCiP have led to groundbreaking and influential papers. Many of these have been published in the Psychonomic Society journal *Behavior Research Methods* (BRM). Each year BRM hosts a special issue of papers from SCiP presentations. Here is a sample of some major papers presented at SCiP and published in BRM. Together, they reflect thousands of citations, and broad influence on the field of psychological science.
 
 Impactful SCiP papers of the past next →
 Cutting, J. E. (1978). A program to generate synthetic walkers as dynamic point-light displays. Behavior Research Methods and Instrumentation, 10, 91-94.
