--- a/content/post/conference.Rmd
+++ b/content/post/conference.Rmd
@@ -9,14 +9,21 @@ showDate: false
 
 ## 2021 Conference Details
 
-The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2021 will be held as a **hybrid** event on **November 4th** from **8:00 - 5:00 PM Central Time**. More details about the conference and submission information coming soon. 
+The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2021 will be held as a **hybrid** event on **November 4th** from **8:00 - 5:00 PM Central Time**. 
+
+The theme for this year’s conference is 50 Years of Computation. As the world increasingly relies on computation, we look back to the advances and innovations from psychology and beyond. Submissions reflecting on the history of advancement in their area are welcomed. We also encourage our members to share this call with others who are doing related work but who may not be regular SCiP attendees. To submit an abstract or symposium proposal, [please follow the instructions on our online submission form](https://forms.gle/cZ9nmCyvxvmh21J66). Please consider forwarding our conference call to folks around your department (especially if they have been unable to attend SCiP in the past). We hope to see you there!
 
 **Important reminder**: Because we are making use of the online platform for the hybrid portion of the event, make sure also to register at the main Psychonomic Society site, then on Mediasite. Links will be provided when they are available. 
 
+### [Submit to SCiP 2021](https://forms.gle/cZ9nmCyvxvmh21J66)
+
 ## Conference Supporters
 
+```{r echo = F, fig.align='center', fig.alt="SCiP Sponsors", out.height="80%"}
+knitr::include_graphics("https://raw.githubusercontent.com/Society-for-Computation-in-Psychology/Society-for-Computation-in-Psychology.github.io/master/files/imgs/sponsors.jpg")
+```
+
 <center>
-![Sponsors](sponsors.jpg)
 [Psychonomic Society](https://www.psychonomic.org/) &nbsp; &nbsp; &nbsp; 
 [Psychology Software Tools](https://pstnet.com/) &nbsp; &nbsp; &nbsp; 
 [Cognition Lab](https://cognitionlab.com/)
@@ -26,9 +33,9 @@ The Annual Meeting of the Society for Computation in Psychology (SCiP) takes pla
 
 Use the following links to download our avaliable programs. If you have a past program we do not have included please [email it](mailto:compinpsych@gmail.com) to us! 
 
-- [SCiP in the 1970s](scip70.zip)
-- [SCiP in the 1980s](scip80.zip)
-- [SCiP in the 1990s](scip90.zip)
-- [SCiP in the 2000s](scip00.zip)
-- [SCiP in the 2010s](scip10.zip)
-- [SCiP in the 2020s](scip20.zip)
+- [SCiP in the 1970s](https://github.com/Society-for-Computation-in-Psychology/Society-for-Computation-in-Psychology.github.io/raw/master/files/programs/scip70.zip)
+- [SCiP in the 1980s](https://github.com/Society-for-Computation-in-Psychology/Society-for-Computation-in-Psychology.github.io/raw/master/files/programs/scip80.zip)
+- [SCiP in the 1990s](https://github.com/Society-for-Computation-in-Psychology/Society-for-Computation-in-Psychology.github.io/raw/master/files/programs/scip90.zip)
+- [SCiP in the 2000s](https://github.com/Society-for-Computation-in-Psychology/Society-for-Computation-in-Psychology.github.io/raw/master/files/programs/scip00.zip)
+- [SCiP in the 2010s](https://github.com/Society-for-Computation-in-Psychology/Society-for-Computation-in-Psychology.github.io/raw/master/files/programs/scip10.zip)
+- [SCiP in the 2020s](https://github.com/Society-for-Computation-in-Psychology/Society-for-Computation-in-Psychology.github.io/raw/master/files/programs/scip20.zip)
