--- a/docs/post/governance.Rmd
+++ b/docs/post/governance.Rmd
@@ -7,207 +7,119 @@ url: /governance/
 showDate: false
 ---
 
+### President and Directorship
+
+- President: Pietro Cipresso, University of Turin
+- President-Elect: TBA
+- Executive Director: Erin Buchanan, Harrisburg University
+- Executive Director: Rick Dale, UCLA
+
+### Steering Committee
+
+- 2018-2021: Stephanie Huette, The University of Memphis
+- 2018-2021: Kay Livesay, Linfield College
+- TBA
+
+[Click here for SCiP's bylaws](https://docs.google.com/document/d/1lM7udTN3c8P17Xx5mkf6xChUIKabMR2y8Ibz2qfQbNk/edit)
+
+### Past Presidents
+
+- 2020: Alexandra Paxton, University of Connecticut
+- 2019: Danielle McNamara, Arizona State University
+- 2018: Chris Westbury, University of Alberta
+- 2017: Xiaowei Zhao, Emmanuel College
+- 2016: Randy Jamieson, University of Manitoba
+- 2015: Peter Dixon, University of Alberta
+- 2014: Kay Livesay, Linfield College
+- 2013: Michael Jones, Indiana University
+- 2012: Ping Li, Pennsylvania State University 
+- 2011: Joseph P. Magliano, Northern Illinois University
+- 2010: Michael H. Birnbaum, California State University, Fullerton 
+- 2009: Xiangen Hu, The University of Memphis
+- 2008: Gary L. Bradshaw, Mississippi State University
+- 2007: Roman Taraban, Texas Tech University
+- 2006: Ulf-Dietrich Reips, University of Zürich 
+- 2005: Christopher Wolfe, Miami University, Oxford 
+- 2004: Robert Proctor, Purdue University 
+- 2003: Curt Burgess, University of California, Riverside
+- 2002: David Washburn, Georgia State University 
+- 2001: Sarah Ransdell, Florida Atlantic University 
+- 2000: Walter Beagley, Alma College 
+- 1999: John Krantz, Hanover College 
+- 1998: Douglas Eamon, University of Wisconsin-Whitewater 
+- 1997: Margaret Anderson, State University of New York 
+- 1996: Michael Levy, University of Florida 
+- 1995: William Palya, Jacksonville State University 
+- 1994: Paula Goolkasian, University of North Carolina, Charlotte 
+- 1993: Doris Aaronson, New York University 
+- 1992: Darrell Butler, Ball State University 
+- 1991: Jonathan Vaughan, Carnegie-Mellon University
+- 1990: David Eckerman, University of North Carolina 
+- 1989: Cynthia McDaniel, Northern Kentucky University 
+- 1988: Earl Hunt, University of Washington 
+- 1987: Cynthia Null, College of William and Mary 
+- 1986: Walter Schneider, University of Illinois 
+- 1985: Dominic Massaro, University of California, Santa Cruz 
+- 1984: Geoffrey Loftus, University of Washington
+- 1983: Alan Lesgold, University of Pittsburgh
+- 1982: Russell Church, Brown University 
+- 1981: John Cotton, University of California, Santa Barbara 
+- 1980: N. John Castellan, Indiana University
+- 1979: Daniel Bailey, University of Colorado 
+- 1978: Richard Millward, Brown University 
+- 1977: Peter Polson, University of Colorado Boulder
+- 1976: Lee Gregg, Carnegie-Mellon University
+- 1975: Joseph Sidowski, University of South Florida
+- 1974: William Uttal, University of Michigan
+- 1973: Donald Tepas, Saint Louis University
+- 1972: Donald Tepas, Saint Louis University
+
+### Past Steering Committee
+
+- 2018-2020: Erin Buchanan, Harrisburg University
+- 2017-2020: Laura Allen, University of New Hampshire
+- 2017-2020: Blair Armstrong, University of Toronto
+- 2017-2020: Pietro Cipresso, University of Turin
+- 2016-2019: Alexandra Paxton, University of Connecticut
+- 2016-2019: Brendan Johns, University at Buffalo
+- 2016-2019: Danielle McNamara, Arizona State University
+- 2015-2018: Stefan Stieger, U. Konstanz
+- 2015-2018: Carol Connor, Arizona State University
+- 2015-2018: Ulf-Dietrich Reips, University of Konstanz
+- 2014-2017: Jennifer Trueblood, Vanderbilt University
+- 2014-2017: Matthew Crump, Brooklyn College of CUNY
+- 2014-2017: Stephanie Huette, The University of Memphis
+- 2013-2016: Jon Willits, Indiana University
+- 2013-2016: Scott Crossley, Georgia State University
+- 2013-2016: Chris Westbury, University of Alberta
+- 2013-2016: Todd Gureckis, New York University
+- 2012-2015: Monica Riordan, Chatham University
+- 2012-2015: Zhiqiang (Carl) Cai, University of Memphis
+- 2011-2014: Chris Koch, George Fox University
+- 2011-2014: Ulf-Dietrich Reips, University of Konstanz
+- 2010-2013: Xiaowei Zhao, Emmanuel College
+- 2010-2013: Peter Dixon, University of Alberta
+- 2010-2013: Randall Jamieson, University of Manitoba
+- 2010-2013: Rick Dale, University of Memphis
+- 2010-2013: Yana Weinstein, Washington University
+- 2009-2012: Patrick Conley, University of Wisconsin
+- 2009-2012: Otto MacLin, University of Northern Iowa
+- 2009-2012: Douglas Mewhort, Queen's University
+- 2009-2012: Danielle McNamara, University of Memphis
+- 2009-2012: Kay Livesay, Linfield College
+- 2009-2011: Giuseppe Riva, Universita Cattolica del Sacro Cuore
+- 2008-2010: Kim-Phuong Vu, California State University
+- 2008-2010: David Waller, Miami University
+- 2007-2009: Michael Schulte-Mecklenbeck, University of Bern
+- 2007-2009: Ping Li, Pennsylvania State University
+- 2007-2009: Joseph P. Magliano, Northern Illinois University
+- 2006-2008: Curt Burgess, University of California, Riverside
+- 2006-2008: Katja Wiemer-Hastings, University of Memphis
 
-President and Directorship
+### Past SCiP Executive Directors
 
-President (2019)
-Danielle McNamara (Arizona State University)
+- 2017-2019: Geoff Hollis, University of Alberta 
+- 2011-2017: Rick Dale, UC Merced / UCLA
+- 2006-2010: Michael Jones, Indiana University 
 
-President-Elect (2020)
-Alexandra Paxton (University of Connecticut)
 
-Past-President (2018)
-Chris Westbury (University of Alberta)
-
-Executive Director (2019-present)
-Rick Dale (UCLA)
-
- 
-
-For inquiries: scip.conference.organizer at gmail
-
-Click here for SCiP's bylaws
- 
-Steering Committee
-
-Erin Buchanan, Harrisburg University (2018-2021)
-
-Stephanie Huette, The University of Memphis (2018-2021)
-
-Kay Livesay, Linfield College (2018-2021)
-
-Laura Allen, University of New Hampshire (2017-2020)
-
-Blair Armstrong, University of Toronto (2017-2020)
-
-Pietro Cipresso, Catholic University of Milan (2017-2020)
-
-Alexandra Paxton, UC Berkeley (2016-2019)
-
-Brendan Johns, University at Buffalo (2016-2019)
-
-Danielle McNamara, Arizona State University (2016-2019)
-
-SCiP Presidents
-
-Randy Jamieson, University of Manitoba (2016)
-
-Peter Dixon, University of Alberta (2015)
-
-Kay Livesay, Linfield College (2014)
-
-Michael Jones, Indiana University (2013)
-
-Ping Li, Pennsylvania State University (2012)
-
-Joseph P. Magliano, Northern Illinois University (2011)
-
-Michael H. Birnbaum, California State University, Fullerton (2010)
-
-Xiangen Hu, The University of Memphis (2009)
-
-Gary L. Bradshaw, Mississippi State University (2008)
-
-Roman Taraban, Texas Tech University (2007)
-
-Ulf-Dietrich Reips, University of Zürich (2006)
-
-Christopher Wolfe, Miami University, Oxford (2005)
-
-Robert Proctor, Purdue University (2004)
-
-Curt Burgess, University of California, Riverside (2003)
-
-David Washburn, Georgia State University (2002)
-
-Sarah Ransdell, Florida Atlantic University (2001)
-
-Walter Beagley, Alma College (2000)
-
-John Krantz, Hanover College (1999)
-
-Douglas Eamon, University of Wisconsin-Whitewater (1998)
-
-Margaret Anderson, State University of New York (1997)
-
-Michael Levy, University of Florida (1996)
-
-William Palya, Jacksonville State University (1995)
-
-Paula Goolkasian, University of North Carolina, Charlotte (1994)
-
-Doris Aaronson, New York University (1993)
-
-Darrell Butler, Ball State University (1992)
-
-Jonathan Vaughan, Carnegie-Mellon University (1991)
-
-David Eckerman, University of North Carolina (1990)
-
-Cynthia McDaniel, Northern Kentucky University (1989)
-
-Earl Hunt, University of Washington (1988)
-
-Cynthia Null, College of William and Mary (1987)
-
-Walter Schneider, University of Illinois (1986)
-
-Dominic Massaro, University of California, Santa Cruz (1985)
-
-Geoffrey Loftus, University of Washington (1984)
-
-Alan Lesgold, University of Pittsburgh (1983)
-
-Russell Church, Brown University (1982)
-
-John Cotton, University of California, Santa Barbara (1981)
-
-N. John Castellan, Indiana University (1980)
-
-Daniel Bailey, University of Colorado (1979)
-
-Richard Millward, Brown University (1978)
-
-Peter Polson, University of Colorado Boulder (1977)
-
-Lee Gregg, Carnegie-Mellon University (1976)
-
-Joseph Sidowski, University of South Florida (1975)
-
-William Uttal, University of Michigan (1974)
-
-Donald Tepas, Saint Louis University (1973)
-
-Donald Tepas, Saint Louis University (1972)
-SCiP Executive Directors
-
-Geoff Hollis, University of Alberta (2017-2019)
-
-Rick Dale, UC Merced / UCLA (2011-2017)
-
-Michael Jones, Indiana University (2006-2010)
-Steering Committee
-
-Stefan Stieger, U. Konstanz (2016-2018)
-
-Carol Connor, Arizona State University (2015-2018)
-
-Ulf-Dietrich Reips, University of Konstanz (2015-2018)
-
-Jennifer Trueblood, Vanderbilt University (2014-2017)
-
-Matthew Crump, Brooklyn College of CUNY (2014-2017)
-
-Stephanie Huette, The University of Memphis (2014-2017)
-
-Jon Willits, Indiana University (2013-2016)
-
-Scott Crossley, Georgia State University (2013-2016)
-
-Chris Westbury, University of Alberta (2013-2016)
-
-Todd Gureckis, New York University (2013-2016)
-
-Monica Riordan, Chatham University (2012-2015)
-
-Zhiqiang (Carl) Cai, University of Memphis (2012-2015)
-
-Chris Koch, George Fox University (2011-2014)
-
-Ulf-Dietrich Reips, University of Konstanz (2011-2014)
-
-Xiaowei Zhao, Emmanuel College (2010-2013)
-
-Peter Dixon, University of Alberta (2010-2013)
-
-Randall Jamieson, University of Manitoba (2010-2013)
-
-Rick Dale, University of Memphis (2010-2013)
-
-Yana Weinstein, Washington University (2010-2013)
-
-Patrick Conley, University of Wisconsin (2009-2012)
-
-Otto MacLin, University of Northern Iowa (2009-2012)
-
-Douglas Mewhort, Queen's University (2009-2012)
-
-Danielle McNamara, University of Memphis (2009-2012)
-
-Kay Livesay, Linfield College (2009-2012)
-
-Giuseppe Riva, Universita Cattolica del Sacro Cuore (2009 and 2011)
-
-Kim-Phuong Vu, California State University (2008-2010)
-
-David Waller, Miami University (2008-2010)
-
-Michael Schulte-Mecklenbeck, University of Bern (2007-2010)
-
-Ping Li, Pennsylvania State University (2007-2009)
-
-Joseph P. Magliano, Northern Illinois University (2007-2009)
-
-Curt Burgess, University of California, Riverside (2006-2008)
-
-Katja Wiemer-Hastings, University of Memphis (2006-2008)
