--- a/docs/post/history.Rmd
+++ b/docs/post/history.Rmd
@@ -7,27 +7,39 @@ url: /history/
 showDate: false
 ---
 
-In 1971, Donald Tepas, then at St. Louis University, contacted the National Science Foundation with a request for support in developing an interactive system for searches. The NSF representative Tepas looked into the possibility of arranging a conference and publishing the proceedings. The first meeting was so successful that the meetings have been held ever since! The logo on the left is from this very first meeting in 1971. 
-
-
+In 1971, Donald Tepas, then at St. Louis University, contacted the National Science Foundation with a request for support in developing an interactive system for searches. The NSF representative Tepas looked into the possibility of arranging a conference and publishing the proceedings. The first meeting was so successful that the meetings have been held ever since! The logo featured on our homepage. 
 
 The Society for Computation in Psychology (SCiP) was previously known as the National Conference on the Use of On-Line Computers in Psychology. The name was changed to the Society for Computation in Psychology in 1982. The first meeting was held on November 10th, 1971, at St. Louis University. This first meeting was held the day prior to the Psychonomic Society's meeting. SCiP is still held before the Psychonomic Society's meetings to this day! The first Presidential Address was given by Donald Tepas in 1973 and was entitled "Computer Analysis of the Electroencephalogram: Evolving, Promoting, and Provoking."
 
-In 2006, Dr. Christopher R. Wolfe documented the history of the Society for Computation in Psychology in Behavior Research Methods:
+**In 2006, Dr. Christopher R. Wolfe documented the history of the Society for Computation in Psychology in *Behavior Research Methods*:**
 
-SCiP history may be divided into three eras: the Paleozoic (1971–1982), the Mesozoic (1982–1994), and the Cenozoic (1994–present). Following a list of Secretary–Treasurers, a list of all SCiP Presidents is provided in Table 1. Next I present personal highlights, including the first symposium on psychology and the World-Wide Web; David Rumelhart’s mathematical explanation of connectionism; and Stevan Harnad’s discussion of "freeing" the journal literature. I observe that a small conference is becoming more intimate and that much of our mission involves figuring out how to conduct high-quality scientific research with consumer-grade electronics. I argue that we are an increasingly international organization, that graduate students are welcome, and that we should become more inclusive in the areas of gender and ethnicity and should make membership more meaningful. I conclude by looking ahead and attempting to predict the future.
+*<font size = "3">SCiP history may be divided into three eras: the Paleozoic (1971–1982), the Mesozoic (1982–1994), and the Cenozoic (1994–present). Following a list of Secretary–Treasurers, a list of all SCiP Presidents is provided in Table 1. Next I present personal highlights, including the first symposium on psychology and the World-Wide Web; David Rumelhart's mathematical explanation of connectionism; and Stevan Harnad's discussion of "freeing" the journal literature. I observe that a small conference is becoming more intimate and that much of our mission involves figuring out how to conduct high-quality scientific research with consumer-grade electronics. I argue that we are an increasingly international organization, that graduate students are welcome, and that we should become more inclusive in the areas of gender and ethnicity and should make membership more meaningful. I conclude by looking ahead and attempting to predict the future.</font>*
 
-His full historical account can be found here. Earlier histories have also been written, as cited below.
+His full historical account can be found [here](https://link.springer.com/content/pdf/10.3758/BF03192776.pdf). Earlier histories have also been written, as cited below.
 
-Computers and technology in psychology can be a cornucopia or a Pandora’s box. During the 20 years of its existence, the Society for Computation in Psychology has been an important focus for the appropriate and beneficial application of computingtechnology in psychology. Although the increase of computer use is unmistakable, cyclic trends in computer applications also can be identified and, together with current technological developments, lead to predictions, concerns, and challenges for the future. (Castellan, 1991)
+*<font size = "3">Computers and technology in psychology can be a cornucopia or a Pandora's box. During the 20 years of its existence, the Society for Computation in Psychology has been an important focus for the appropriate and beneficial application of computingtechnology in psychology. Although the increase of computer use is unmistakable, cyclic trends in computer applications also can be identified and, together with current technological developments, lead to predictions, concerns, and challenges for the future (Castellan, 1991).</font>*
 
-The late Dr. N. John Castellan
+```{r echo = F, fig.align='center', fig.alt="Dr. Castellan", out.width="40%"}
+knitr::include_graphics("https://raw.githubusercontent.com/Society-for-Computation-in-Psychology/Society-for-Computation-in-Psychology.github.io/master/files/imgs/castellan.png")
+```
 
-As we enter the next decade, I believe it is important that the Society for Computation in Psychology (S.C.I.P.) develop a little sense of history. So I would like to cover some years of the organization’s development and, in the process, cite several highlights that are worthy of note... (Sidowski, 1990)
+*<font size = "3">The late Dr. N. John Castellan</font>*
 
-Presentations at SCiP have led to groundbreaking and influential papers. Many of these have been published in the Psychonomic Society journal Behavior Research Methods (BRM). Each year BRM hosts a special issue of papers from SCiP presentations. Here is a sample of some major papers presented at SCiP and published in BRM. Together, they reflect thousands of citations, and broad influence on the field of psychological science.
+*<font size = "3">As we enter the next decade, I believe it is important that the Society for Computation in Psychology (S.C.I.P.) develop a little sense of history. So I would like to cover some years of the organization's development and, in the process, cite several highlights that are worthy of note (Sidowski, 1990).</font>*
 
-Impactful SCiP papers of the past next →
-Cutting, J. E. (1978). A program to generate synthetic walkers as dynamic point-light displays. Behavior Research Methods and Instrumentation, 10, 91-94.
+Presentations at SCiP have led to groundbreaking and influential papers. Many of these have been published in the Psychonomic Society journal *Behavior Research Methods* (BRM). Each year BRM hosts a special issue of papers from SCiP presentations. Here is a sample of some major papers presented at SCiP and published in BRM. Together, they reflect thousands of citations, and broad influence on the field of psychological science.
 
-Semantics of SCiP: Crump, Jamieson and Aujla (SCiP 2019) developed a semantic model along with an interactive tool to explore the conceptual trends of recent SCiP submissions. Click here to try it yourself! Reference: Crump, M. J. C., Jamieson, R. K., & Aujla, H. (SCiP 2019). Semantic Librarian for SCIP abstracts: An R Shiny App and Package for searching and visualizing semantic spaces. 
+Impactful SCiP papers across the years:
+
+- Cutting, J. E. (1978). A program to generate synthetic walkers as dynamic point-light displays. *Behavior Research Methods and Instrumentation*, 10, 91-94. [doi:10.3758/BF03205105](https://link.springer.com/article/10.3758%2FBF03205105)
+- Hintzman, D. L. (1984). MINERVA 2: A simulation model of human memory. *Behavior Research Methods, Instruments, and Computers*, 16, 96-101. [doi:10.3758/BF03202365](https://link.springer.com/article/10.3758%2FBF03202365)
+- Rosen, L. D., Sears, D. C. & Weil, M. M. (1987). Computerphobia. *Behavior Research Methods, Instruments, and Computers*, 19, 167-179. [doi:10.3758/BF03203781](https://link.springer.com/article/10.3758%2FBF03203781)
+- Schneider, W. (1988). Micro Experimental Laboratory: An integrated system for IBM PC compatibles. *Behavior Research Methods, Instruments, and Computers*, 20, 206-217. [doi:10.3758/BF03203833](https://link.springer.com/article/10.3758%2FBF03203833)
+- Dumais, S. T. (1991). Improving the retrieval of information from external sources. *Behavior Research Methods, Instruments, and Computers*, 23, 229-236. [doi:10.3758/BF03203370](https://link.springer.com/article/10.3758/BF03203370)
+- Cohen, J., MacWhinney, B., Flatt, M. & Provost, J. (1993). PsyScope: An interactive graphic system for designing and controlling experiments in the psychology laboratory using Macintosh computers. *Behavior Research Methods, Instruments, and Computers*, 25, 257-271. [doi:10.3758/BF03204507](https://link.springer.com/article/10.3758/BF03204507)
+- Lund, K. & Burgess, C. (1996). Producing high-dimensional semantic spaces from lexical co-occurrence. *Behavior Research Methods, Instruments, and Computers*, 28, 203-208. [doi:10.3758/BF03204766](https://link.springer.com/article/10.3758/BF03204766)
+- Reips, U. (2001). The Web experimental psychology lab: Five years of data collection on the Internet. *Behavior Research Methods, Instruments, and Computers*, 33, 201-211. [doi:10.3758/BF03195366](https://link.springer.com/article/10.3758/BF03195366)
+- Graesser, Arthur C, McNamara, Danielle S, Louwerse, Max M & Cai, Zhiqiang (2004). Coh-Metrix: Analysis of text on cohesion and language. *Behavior Research Methods*, 36, 193-202. [doi:10.3758/BF03195564](https://link.springer.com/article/10.3758/BF03195564)
+- Aujla, H., Crump, M.J.C., Cook, M.T. et al. (2019). The Semantic Librarian: A search engine built from vector-space models of semantics. *Behavior Research Methods*, 51, 2405–2418. [doi:10.3758/s13428-019-01268-4](https://link.springer.com/article/10.3758/s13428-019-01268-4)
+- Please submit your SCiP publications to [our email](mailto:compinpsych@gmail.com) for us to archive!
+
