fixing the governance page

--- a/content/post/governance.Rmd
+++ b/content/post/governance.Rmd
@@ -18,7 +18,8 @@ showDate: false
 
 - 2018-2021: Stephanie Huette, The University of Memphis
 - 2018-2021: Kay Livesay, Linfield College
-- TBA
+- 2021-2024: Xiaowei Zhao, Emmanuel College
+- 2021-2024: Caitlin Mills, University of New Hampshire
 
 [Click here for SCiP's bylaws](https://docs.google.com/document/d/1lM7udTN3c8P17Xx5mkf6xChUIKabMR2y8Ibz2qfQbNk/edit)
 
