adding new announcement

--- a/content/post/announcements.Rmd
+++ b/content/post/announcements.Rmd
@@ -13,9 +13,11 @@ knitr::include_graphics("https://raw.githubusercontent.com/Society-for-Computati
 
 **Society for Computation in Psychology**. A forum for cutting-edge methods for the psychological sciences since 1971. *Computation, information, technology, statistics, applications and more!*
 
+You can view our previous emails to the society [using this link](/emails/).
+
 ### Steering Committee and President
 
-We now invite nominations for candidates for [a] three positions on the Society's Steering Committee, [b] for the new President-Elect. All members are invited to participate in this process. Nominate your candidates here by **August 15th, 2021**. 
+We now invite nominations for candidates for [a] three positions on the Society's Steering Committee, [b] for the new President-Elect. All members are invited to participate in this process. Nominate your candidates here by **August 31st, 2021**.
 
 #### [Nominate Members](https://forms.gle/P1XaiATMEKAsD268A)
 
@@ -24,5 +26,13 @@ We now invite nominations for candidates for [a] three positions on the Society'
 The Annual Meeting of the Society for Computation in Psychology (SCiP) takes place one day before the main conference of the [Psychonomic Society](https://www.psychonomic.org/). SCiP 2021 will be held as a **hybrid** event on **November 4th** from **8:00 - 5:00 PM Central Time**. More details about the conference and submission information coming soon. Please check out the [Conference](/conference/) page for more information. Submissions are due **August 31st, 2021**.
 
 #### [Submit to SCiP 2021](https://forms.gle/cZ9nmCyvxvmh21J66 )
+
+### FABBS Early Career Award
+
+[The Federation of Associations in Behavioral & Brain Sciences (FABBS)](https://fabbs.org/) represents a coalition of scientific societies with a common goal of advancing our understanding of mind, brain and behavior. SCiP has been a member society of FABBS for several years. FABBS educates federal representatives and Congress on sciences of the mind, advocates for legislation and policy that enhance scientific training and research, and more. Because we are a FABBS society, members of SCiP get free access to [Policy Insights from the Behavioral and Brain Sciences](https://journals.sagepub.com/home/bbs) (PIBBS).
+
+FABBS organizes the [Early Career Impact Award](https://fabbs.org/honoring-our-scientists/impact-award-winners/), and each of its member societies, every few years, chooses a recipient whose research has already made a big impact at an early stage of professional development.
+
+#### [Nominate a Scholar](https://forms.gle/z1mdg6hGWhqARZjBA)
 
 #### [Subscribe to the Mailing List](https://mailchi.mp/4df6e290ffee/ub0p519mz8)
