--- a/docs/emails.Rmd
+++ b/docs/emails.Rmd
@@ -22,33 +22,18 @@ Conference Update: The Psychonomic Society is still planning for a hybrid confer
 
 Important Due Dates: 
  
-Nominate Steering Committee Members / President
-August 31
-Conference Submissions 
-August 31
-Steering Committee / President Election 
-September 15
-Nominate Early Career Awards
-September 10
-Agenda to Psychonomics
-September 13
-Notification of Acceptance for Conference 
-September 15
-Full Session Agenda to Psychonomics
-September 20
-Online Spoken Talks Due
-TBA
-Castellan Student Papers Due
-October 1
-Review Affiliate Information 
-October 5-7
-Online Poster Presentations Due
-October 12
-Virtual Platform Access
-October 18
-Conference
-November 4
-
+- Nominate Steering Committee Members / President - August 31
+- Conference Submissions - August 31
+- Nominate Early Career Awards - September 10
+- We submit agenda to Psychonomics - September 13
+- Notification to you of presentation - September 15
+- Steering Committee / President Election - September 15
+- Finalized agenda to Psychonomics -  September 20
+- Castellan Papers due - October 1
+- Online Poster presentations due - October 12
+- Online Spoken presentations due - October TBD
+- Virtual Platform Access - October 18
+- Conference - November 4
  
 Sincerely,
 Pietro Cipresso (U. Turin), SCiP President
