--- a/docs/emails.Rmd
+++ b/docs/emails.Rmd
@@ -14,26 +14,27 @@ Please note that not all links will be avaliable as this is an archive of the em
 Hi SCiPpers!
 
 Three important tasks for you:
-Nominate members or yourself for the Steering Committee and President: https://forms.gle/15H4HXPFRik3p7Ly7 extended to August 31st.
-Submit for the conference: https://forms.gle/aRD35wAMhnQTpaFs7 by August 31st.
-Nominate members or yourself for FABBS Early Career Award: https://forms.gle/z1mdg6hGWhqARZjBA by September 10th. 
+
+        - Nominate members or yourself for the Steering Committee and President: https://forms.gle/15H4HXPFRik3p7Ly7 extended to August 31st.
+        - Submit for the conference: https://forms.gle/aRD35wAMhnQTpaFs7 by August 31st.
+        - Nominate members or yourself for FABBS Early Career Award: https://forms.gle/z1mdg6hGWhqARZjBA by September 10th. 
 
 Conference Update: The Psychonomic Society is still planning for a hybrid conference, but is monitoring the situation in Louisiana (which is currently not optimal). The city of New Orleans has recently put in a mandate that patrons must show vaccination proof or a negative COVID test to enter buildings. We will monitor the situation to be flexible with those who want to change to virtual presentations if that need arises. 
 
 Important Due Dates: 
  
-- Nominate Steering Committee Members / President - August 31
-- Conference Submissions - August 31
-- Nominate Early Career Awards - September 10
-- We submit agenda to Psychonomics - September 13
-- Notification to you of presentation - September 15
-- Steering Committee / President Election - September 15
-- Finalized agenda to Psychonomics -  September 20
-- Castellan Papers due - October 1
-- Online Poster presentations due - October 12
-- Online Spoken presentations due - October TBD
-- Virtual Platform Access - October 18
-- Conference - November 4
+        - Nominate Steering Committee Members / President - August 31
+        - Conference Submissions - August 31
+        - Nominate Early Career Awards - September 10
+        - We submit agenda to Psychonomics - September 13
+        - Notification to you of presentation - September 15
+        - Steering Committee / President Election - September 15
+        - Finalized agenda to Psychonomics -  September 20
+        - Castellan Papers due - October 1
+        - Online Poster presentations due - October 12
+        - Online Spoken presentations due - October TBD
+        - Virtual Platform Access - October 18
+        - Conference - November 4
  
 Sincerely,
 Pietro Cipresso (U. Turin), SCiP President
